# napari-ndtiffs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
docs/: index.md
napari_ndtiffs/: __init__.py  _cupy_affine.py  _ocl_affine.py  affine.py  reader.py  settingstxt.py
napari_ndtiffs/_tests/: test_ndtiffs.py
src/napari_ndtiffs/: __init__.py  _cupy_affine.py  _ocl_affine.py  affine.py  napari.yaml  reader.py  settingstxt.py
tests/: test_affine.py
