[metadata]
name = napari-ndtiffs
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3
url = https://github.com/tlambert03/napari-ndtiffs
description = napari plugin for nd tiff folders with OpenCl deskew
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-ndtiffs/issues
    Documentation = https://github.com/tlambert03/napari-ndtiffs#README.md
    Source Code = https://github.com/tlambert03/napari-ndtiffs
    User Support = https://github.com/tlambert03/napari-ndtiffs/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    napari_plugin_engine>=0.1.4
    numpy
    dask[array]
    python-dateutil
    scipy
    tifffile


[options.entry_points] 
napari.plugin = 
    ndtiffs = napari_ndtiffs
